Acabada la parte de BaseX